# fastapi-injected

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
fastapi_injected/: __init__.py  _fastapi_lifecycle.py  deps.py  inject.py  resolve.py  scope.py  sign.py  solve.py  types.py
tests/: deps.py  test_fastapi.py  test_inject.py  test_resolve.py  test_solve.py  test_typing.py
tests/ext/: test_pydantic_ai.py
