[project]
name = "fastapi-injected"
version = "0.1.4"
description = "Yet another library to reuse fastapi dependency injection"
authors = [
    { name = "Yurii Karabas", email = "1998uriyyo@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastapi>=0.139.2",
    "typing-extensions>=4.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "ty>=0.0.62",
    "pre-commit>=4.6.1",
    "pydantic-ai-slim>=2.15.0",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/uriyyo/fastapi-injected"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",  # select all checks by default
]
ignore = [
    # single rule exclude
    "S101",    # allow assert usage
    "PLR2004", # allow to compare with "magic numbers"
    "TRY003",  # allow message in exception class

    # full rule exclude
    "D",   # ignore docstrings
    "FA",  # ignore future annotations
    "ANN", # ignore annotations
    "FIX", # ignore FIXMEs
    "TD",  # ignore all TODOs
    "ARG", # ignore unused arguments
    "FBT", # ignore flake8-boolean-trap
    "EM",  # ignore error message formatting
    "TC",  # ignore type checking
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.paths]
source = ["fastapi_injected"]

[tool.coverage.run]
source = ["fastapi_injected"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
    "@overload",
    "if TYPE_CHECKING:",
]
